force-app/main/default/objects/Custom_activity__c/Custom_activity__c.object-meta.xml
<CustomObject>
    <label>活動（販売用）</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>販売用活動ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>