force-app/main/default/objects/Custom_activity__c/fields/call_user__c.field-meta.xml
<CustomField>
    <fullName>call_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対応者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>call_user1</relationshipName>
    <type>Lookup</type>
</CustomField>