force-app/main/default/objects/Custom_activity__c/fields/Comment_Event__c.field-meta.xml
<CustomField>
    <fullName>Comment_Event__c</fullName>
    <label>メモ・ネクストアクション（テキスト）</label>
    <type>TextArea</type>
</CustomField>