force-app/main/default/objects/Custom_activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>TEXT(Contact_Action__c) &amp; &quot; / &quot; &amp;  TEXT(Contact_Purpose__c) &amp; &quot; / &quot; &amp;  Owner:User.LastName &amp; &quot;  &quot; &amp; Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>コンタクト区分/内容</label>
    <type>Text</type>
</CustomField>