force-app/main/default/objects/Custom_activity__c/fields/Contact_Action__c.field-meta.xml
<CustomField>
    <fullName>Contact_Action__c</fullName>
    <label>コンタクト区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>架電</fullName>
            </value>
            <value>
                <fullName>受電</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>SNSチャット</fullName>
            </value>
            <value>
                <fullName>訪問</fullName>
            </value>
            <value>
                <fullName>電話不通</fullName>
            </value>
            <value>
                <fullName>メモ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>