force-app/main/default/objects/Custom_activity__c/fields/Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contact_Purpose__c</fullName>
    <label>コンタクト内容</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>問い合わせ</fullName>
            </value>
            <value>
                <fullName>新規登録</fullName>
            </value>
            <value>
                <fullName>新規営業</fullName>
            </value>
            <value>
                <fullName>既存営業</fullName>
            </value>
            <value>
                <fullName>過去既存営業</fullName>
            </value>
            <value>
                <fullName>代理出品営業</fullName>
            </value>
            <value>
                <fullName>物流関連</fullName>
            </value>
            <value>
                <fullName>経理関連</fullName>
            </value>
            <value>
                <fullName>クレーム</fullName>
            </value>
            <value>
                <fullName>貿易/輸出関連</fullName>
            </value>
            <value>
                <fullName>未入金</fullName>
            </value>
            <value>
                <fullName>未搬出</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>