force-app/main/default/objects/Custom_activity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>未会員リード</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>活動（販売用）</relationshipLabel>
    <relationshipName>Lead_relation_in_activity</relationshipName>
    <type>Lookup</type>
</CustomField>