force-app/main/default/objects/Custom_activity__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員名</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipName>Ihnh</relationshipName>
    <type>Lookup</type>
</CustomField>