force-app/main/default/objects/Custom_activity__c/fields/Member_SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>Member_SalesforceId__c</fullName>
    <formula>Member__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>販売会員情報ID</label>
    <type>Text</type>
</CustomField>