force-app/main/default/objects/Custom_activity__c/fields/Memo_action__c.field-meta.xml
<CustomField>
    <fullName>Memo_action__c</fullName>
    <label>メモ・ネクストアクション（車両情報が紐づかない場合）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>