force-app/main/default/objects/Custom_activity__c/fields/YYYYMM__c.field-meta.xml
<CustomField>
    <fullName>YYYYMM__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年月（作成日）</label>
    <type>Text</type>
</CustomField>