force-app/main/default/objects/Custom_activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Create_Datetime__c</columns>
    <columns>Contact__c</columns>
    <columns>Memo_action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>